--- a/src/app/app.component.sass
+++ b/src/app/app.component.sass
@@ -4,21 +4,24 @@ app-header
   height: 30%
 
 .link-button
+    background-color: #2b3540
     border-style: solid
-    border-color: $nice-teal-color
+    border-color: #627f9c
     border-width: 1px
     width: 100px
     border-radius: 20px
     font-family: 'Hind Madurai', sans-serif
-    color: $nice-teal-color
+    color: whitesmoke
     text-decoration: none
     outline: none
+    margin-left: 10px
+    margin-right: 10px
 
-div .link-button
-  margin: 0 auto
-  background-color: #2f3845
-  color: $white-green
-  box-shadow: 3px 3px 3px $shadow-color
+//button .link-button
+//  margin: 0 auto
+//  //background-color: #2f3845
+//  //color: $white-green
+//  box-shadow: 3px 3px 3px $shadow-color
 
 .button-list
   display: flex
