--- a/src/app/components/header/header/header.component.sass
+++ b/src/app/components/header/header/header.component.sass
@@ -2,22 +2,21 @@
 
 div
   border-style: solid
-  border-color: $nice-teal-color
+  border-color: #627f9c
   border-width: 2px
-  margin-left: 10%
-  margin-right: 10%
   margin-top: 10px
   box-shadow: 3px 3px 3px $shadow-color
   text-align: center
+  padding: 3px
 
 h1
   letter-spacing: 5px
   font-family: 'Alfa Slab One', cursive
-  color: $nice-teal-color
+  color: white
   text-shadow: 2px 2px 2px black
 
 h4
   letter-spacing: 5px
   font-family: 'Hind Madurai', sans-serif
-  color: $nice-teal-color
+  color: whitesmoke
   text-shadow: 3px 3px 5px $shadow-color
