--- a/src/styles.sass
+++ b/src/styles.sass
@@ -1,3 +1,22 @@
 /* You can add global styles to this file, and also import other style files */
 body
-  background-color: #2b3540
+  background-color: #2b3540 !important
+
+mat-card-title
+  display: flex
+  justify-content: space-between
+
+mat-card, mat-tab-group
+  margin-bottom: 20px
+  background-color: #425466 !important
+  color: white !important
+
+mat-card-subtitle, .mat-tab-label
+  color: white !important
+mat-tab-body
+  background-color: #2f3c4a !important
+//mat-tab-group
+//  background-color: #3a4b5c !important
+
+/* Importing Bootstrap SCSS file. */
+@import '~bootstrap/scss/bootstrap'
