--- a/src/app/components/header/header/header.component.html
+++ b/src/app/components/header/header/header.component.html
@@ -1,4 +1,23 @@
-<div id="header-div">
-  <h1 [@simpleFadeAnimation]="'in'">Jorden Carter-Whitbey</h1>
-  <h4 [@simpleFadeAnimation]="'in'">Software Engineer</h4>
+<div class="mb-3">
+  <div class="row" style="background:#425466;"></div>
+  <div class="container">
+    <div class="roundedCenter">
+      <img src="/assets/profile-image.webp" alt="profile image">
+    </div>
+  </div>
+  <div class="w-100" style="background:#2f3c4a ;">
+    <div class="container" id="title">
+      <div class="d-flex justify-content-end align-content-center">
+        <div class="h-100 pt-2">
+          <h1 [@simpleFadeAnimation]="'in'" class="h-50 align-content-center">Jorden Carter-Whitbey</h1>
+          <h4 [@simpleFadeAnimation]="'in'" class="h-50">Software Engineer</h4>
+        </div>
+      </div>
+    </div>
+  </div>
+
 </div>
+<!--<div id="header-div">-->
+<!--  <h1 [@simpleFadeAnimation]="'in'">Jorden Carter-Whitbey</h1>-->
+<!--  <h4 [@simpleFadeAnimation]="'in'">Software Engineer</h4>-->
+<!--</div>-->
