--- a/src/app/components/header/header/header.component.sass
+++ b/src/app/components/header/header/header.component.sass
@@ -1,13 +1,13 @@
 @import "../../../variables.sass"
 
-div
-  border-style: solid
-  border-color: #627f9c
-  border-width: 2px
-  margin-top: 10px
-  box-shadow: 3px 3px 3px $shadow-color
-  text-align: center
-  padding: 3px
+//div
+//  border-style: solid
+//  border-color: #627f9c
+//  border-width: 2px
+//  margin-top: 10px
+//  box-shadow: 3px 3px 3px $shadow-color
+//  text-align: center
+//  padding: 3px
 
 h1
   letter-spacing: 5px
@@ -16,7 +16,26 @@ h1
   text-shadow: 2px 2px 2px black
 
 h4
+  display: flex
+  justify-content: end
   letter-spacing: 5px
   font-family: 'Hind Madurai', sans-serif
   color: whitesmoke
   text-shadow: 3px 3px 5px $shadow-color
+
+.row
+  height: 150px
+
+
+.roundedCenter > img
+  /*Change:  */
+  width: 160px
+  height: 160px
+
+  /*Don't change:  */
+  position: absolute
+  transform: translate3d(-50%, -50%, 0)
+  left: 20%
+  background: #fff
+  box-shadow: 0 5px 7px rgba(0,0,0,0.1)
+  border-radius: 50%
