--- a/src/app/components/header/header/header.component.sass
+++ b/src/app/components/header/header/header.component.sass
@@ -10,7 +10,13 @@
 //  padding: 3px
 
 h1
-  letter-spacing: 5px
+  @media screen and (max-width: 800px)
+    font-size: 20px
+  @media screen and (min-width: 800px) and (max-width: 925px)
+    font-size: 16px
+    letter-spacing: 2px
+  @media screen and (min-width: 925px)
+    letter-spacing: 5px
   font-family: 'Alfa Slab One', cursive
   color: white
   text-shadow: 2px 2px 2px black
@@ -24,18 +30,23 @@ h4
   text-shadow: 3px 3px 5px $shadow-color
 
 .row
-  height: 150px
-
+  @media screen and (max-width: 925px)
+    height: 80px
+  @media screen and (min-width: 925px)
+    height: 160px
 
 .roundedCenter > img
-  /*Change:  */
-  width: 160px
-  height: 160px
-
   /*Don't change:  */
   position: absolute
   transform: translate3d(-50%, -50%, 0)
-  left: 20%
   background: #fff
   box-shadow: 0 5px 7px rgba(0,0,0,0.1)
   border-radius: 50%
+  @media screen and (max-width: 925px)
+    width: 100px
+    height: 100px
+    left: 15%
+  @media screen and (min-width: 925px)
+    width: 160px
+    height: 160px
+    left: 20%
