--- a/src/app/components/header/header/header.component.html
+++ b/src/app/components/header/header/header.component.html
@@ -2,7 +2,7 @@
   <div class="row" style="background:#425466;"></div>
   <div class="container">
     <div class="roundedCenter">
-      <img src="/assets/PROFILE.jpeg" alt="profile image">
+      <img src="/assets/profile.jpeg" alt="profile image" loading="eager">
     </div>
   </div>
   <div class="w-100" style="background:#2f3c4a ;">
