social profile changes

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -9,6 +9,8 @@
       <button mat-raised-button (mouseenter)="enterHover($event)" (mouseleave)="exitHover($event)" routerLink="/work" class="link-button ml-1" id="work-button">
         Work
       </button>
+      <a href="https://github.com/Jordendarc" target="_blank"><button class="social-button ml-1" mat-raised-button><fa-icon [icon]="faGithub"></fa-icon></button></a>
+      <a href="https://www.linkedin.com/in/jorden-carter-whitbey/" target="_blank"><button class="social-button ml-1" mat-raised-button><fa-icon [icon]="faLinkedin"></fa-icon></button></a>
     </div>
     <!-- <app-about-me></app-about-me> -->
     <router-outlet></router-outlet>
