--- a/src/app/app.component.sass
+++ b/src/app/app.component.sass
@@ -16,12 +16,18 @@ app-header
     outline: none
     margin-left: 10px
     margin-right: 10px
-
-//button .link-button
-//  margin: 0 auto
-//  //background-color: #2f3845
-//  //color: $white-green
-//  box-shadow: 3px 3px 3px $shadow-color
+.social-button
+  background-color: #2b3540
+  border-style: solid
+  border-color: #627f9c
+  border-width: 1px
+  border-radius: 20px
+  font-family: 'Hind Madurai', sans-serif
+  color: whitesmoke
+  text-decoration: none
+  outline: none
+  margin-left: 10px
+  margin-right: 10px
 
 .button-list
   display: flex
